--- a/_config.anzhiyu.yml
+++ b/_config.anzhiyu.yml
@@ -433,8 +433,8 @@ comments:
 # valine
 # https://valine.js.org
 valine:
-  appId:
-  appKey:
+  appId: xxxxx # leancloud application app id
+  appKey: xxxxx # leancloud application app key
   pageSize: 10 # comment list page size
   avatar: mp # gravatar style https://valine.js.org/#/avatar
   lang: zh-CN # i18n: zh-CN/zh-TW/en/ja
